# Vex-Lang

./: .gitignore  README.md  VEX_AUDIT.md  VEX_PROOF.md  append_demo.vex  ast_demo.vex  bool_demo.vex  break_demo.vex  continue_demo.vex  function_demo.vex  if_else_demo.vex  len_demo.vex  list_demo.vex  logical_demo.vex  main.py  pyproject.toml  vm_demo.vex  while_demo.vex
examples/: hello.vex
tests/: test_ast.py  test_compiler_pipeline.py  test_config.py  test_lexer.py  test_parser.py  test_translator.py  test_vm.py
vex/: __init__.py  ast_nodes.py  builtins.py  bytecode.py  cli.py  compiler.py  config.py  errors.py  keywords.py  lexer.py  modes.py  parser.py  runner.py  runtime.py  tokens.py  translator.py  transpiler.py  vm.py
vex_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
