[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vex-lang"
version = "0.1.0"
description = "A Python-powered language with Hinglish/English dual mode"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sohail Ali", email = "sohailali8480@gmail.com" }
]
keywords = ["programming-language", "hinglish", "python", "transpiler"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[project.scripts]
vex = "vex.cli:main"

[project.urls]
Homepage = "https://github.com/sohailcodes-ai/Vex-Lang"